--- a/app/components/infos/infos.html
+++ b/app/components/infos/infos.html
@@ -1,10 +1,10 @@
-<div>
+<div ng-controller="InfosCtrl">
 	helooo
 	{{toto}}
 </div>
 
 <script>
-	jDash.controller("InfosCtrl", function($scope) {
+	angular.controller("InfosCtrl", function($scope) {
 		$scope.toto = "bijour";
 	});
 </script>
